# Solar-Crypto-Bot

./: railway.Dockerfile
.github/workflows/: e2e-tests.yml
app/: index.html
services/: pyproject.toml
services/api/: mock_routes.py  models.py  utils.py
services/core/: crypto_pair.py  kraken_service.py  market_analysis_service.py  market_data.py  order.py  order_management_service.py  portfolio.py  portfolio_service.py  position.py  trading_bot_service.py  trading_signal.py  trading_strategy.py
