[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg",
    "psycopg_pool", # Make sure this is present
    "sqlalchemy",
    "pandas",
    "requests",
    "python-dotenv",
    "pykrakenapi",
    "pandas-ta",
    "pytz",
    "bcrypt",
    "pyjwt",
    "httpx",
    "boto3" # Make sure this is present
]

[tool.setuptools]
packages = ["api", "core", "solar"] # Make sure this is correctly placed