[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]", # Includes Uvicorn's default dependencies
    "psycopg",
    "psycopg_pool",
    "sqlalchemy",
    "pandas",
    "requests",
    "python-dotenv",
    "pykrakenapi",
    "pandas-ta",
    "pytz",
    "bcrypt",
    "pyjwt",
    "httpx",
    "boto3",
    "loguru",
    "numpy", # Required by services/core/market_analysis_service.py
    "typing_extensions", # Used in services/api/utils.py for Annotated/Doc
    # Optional but common dependencies for FastAPI projects:
    # "alembic",            # Consider adding if you use DB migrations programmatically
    # "python-multipart",   # Consider adding if you handle file uploads/form data
    # "email-validator",    # Consider adding if you validate email fields with Pydantic
]

[tool.setuptools]
packages = ["api", "core", "solar"]